gcc/testsuite/rust/rustc/ui/parser/issue-17383.rs
enum X {
    A = 3,
// { dg-error ".E0658." "" { target *-*-* } .-1 }
    B(usize)
}

fn main() {}

